--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,4 +22,12 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <!--Front UI text theme-->
+    <style name="mainTextAlignments">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:textStyle">bold|italic</item>
+    </style>
+
 </resources>
