--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,6 +30,7 @@
         <item name="fontFamily">sans-serif-medium</item>
         <item name="android:layout_weight">1</item>
         <item name="android:textStyle">bold|italic</item>
+        <item name="android:textSize">12dp</item>
     </style>
 
 </resources>
