--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,8 +25,7 @@
     <style name="mainTextAlignments">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_gravity">center_vertical</item>
-        <item name="android:gravity">center</item>
+        <item name="android:gravity">left</item>
         <item name="fontFamily">sans-serif-medium</item>
         <item name="android:layout_weight">1</item>
         <item name="android:textStyle">bold|italic</item>
