--- a/app/src/main/res/layout/earthquake_activity.xml
+++ b/app/src/main/res/layout/earthquake_activity.xml
@@ -14,8 +14,12 @@
 -->
 <!-- Layout for a list of earthquakes -->
 <ListView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/earthQuakeList"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_marginLeft="16dp"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:layout_weight="1"
+    tools:text="30km S of"
     android:divider="@color/colorPrimary"
     android:orientation="vertical" />
