--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -14,17 +14,19 @@
 
     <TextView
         android:id="@+id/mag"
+        style="@style/mainTextAlignments"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_gravity="center_vertical"
         android:background="@drawable/magnitude_circle"
         android:fontFamily="sans-serif-medium"
         android:textColor="@android:color/black"
-        android:textSize="12sp"
-        tools:text="8.9"
-        style="@style/mainTextAlignments" />
+        android:textSize="16sp"
+        android:paddingLeft="18dp"
+        android:paddingTop="18dp"
+        tools:text="8.9" />
 
-   <LinearLayout
+    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
@@ -34,15 +36,15 @@
            style="@style/mainTextAlignments"
            android:textColor="#72A0C1"/>
 
-       <TextView
-           android:id="@+id/locationDetails"
-           style="@style/mainTextAlignments" />
-
    </LinearLayout>
 
     <TextView
         android:id="@+id/date"
         android:gravity="right"
+        style="@style/mainTextAlignments" />
+
+    <TextView
+        android:id="@+id/locationDetails"
         style="@style/mainTextAlignments" />
 
 
