--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -3,9 +3,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:gravity="center_vertical"
-    android:minHeight="?android:attr/listPreferredItemHeight"
+    android:layout_height="?android:attr/listPreferredItemHeight"
     android:orientation="horizontal"
     android:paddingStart="16dp"
     android:paddingLeft="16dp"
@@ -15,12 +13,13 @@
     <TextView
         android:id="@+id/mag"
         style="@style/mainTextAlignments"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
         android:layout_gravity="center_vertical"
         android:background="@drawable/magnitude_circle"
         android:fontFamily="sans-serif-medium"
-        android:textColor="@android:color/black"
+        android:gravity="center"
+        android:textColor="@android:color/white"
         android:textSize="16sp"
         android:paddingLeft="18dp"
         android:paddingTop="18dp"
