Changed list_item.xml <LinearLayout> 2 Nested Linear Layout

--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -26,8 +26,12 @@
         tools:text="8.9" />
 
     <LinearLayout
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_weight="1"
        android:orientation="vertical">
 
        <TextView
