--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -21,30 +21,28 @@
         android:gravity="center"
         android:textColor="@android:color/white"
         android:textSize="16sp"
-        android:paddingLeft="18dp"
-        android:paddingTop="18dp"
         tools:text="8.9" />
 
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:layout_weight="1"
-       android:orientation="vertical">
+        android:orientation="vertical">
 
-       <TextView
-          android:id="@+id/locationOffset"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:ellipsize="end"
-           android:fontFamily="sans-serif-medium"
-           android:maxLines="1"
-           android:textAllCaps="true"
-           android:textColor="@color/textColorEarthquakeDetails"
-           android:textSize="12sp"
-           tools:text="30km S of"/>
+        <TextView
+            android:id="@+id/locationOffset"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:fontFamily="sans-serif-medium"
+            android:maxLines="1"
+            android:textAllCaps="true"
+            android:textColor="@color/textColorEarthquakeDetails"
+            android:textSize="12sp"
+            tools:text="30km S of" />
 
         <TextView
             android:id="@+id/locationDetails"
@@ -56,14 +54,16 @@
             android:textSize="16sp"
             tools:text="Long placeholder location that should wrap to more than 2 lines of text" />
 
-   </LinearLayout>
+    </LinearLayout>
 
     <TextView
         android:id="@+id/date"
-        android:gravity="right"
-        style="@style/mainTextAlignments" />
-
-
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:textColor="@color/textColorEarthquakeDetails"
+        android:textSize="12sp"
+        tools:text="Mar 6, 2010" />
 
 
 </LinearLayout>
